--- a/LAB5-6/Files/html-watch-list.html
+++ b/LAB5-6/Files/html-watch-list.html
@@ -20,6 +20,13 @@
 <td>350</td>
 <td><a href="https://www.youtube.com/watch?v=WYDWSNMTauQ">Click</a></td>
 </tr>
+<tr>
+<td>Suits</td>
+<td>Reality</td>
+<td>2012</td>
+<td>5</td>
+<td><a href="https://www.youtube.com/watch?v=6Zu0yYV2uYs">Click</a></td>
+</tr>
 </table>
 </body>
 </html>
